--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,25 @@
 {
   "manifest_version": 3,
-  "name": "PDF Research Toolkit",
+  "name": "PDF Text Extractor",
   "version": "1.0",
-  "description": "Helps with PDF research papers",
-  "permissions": ["tabs", "activeTab", "scripting", "storage"],
-  "host_permissions": ["<all_urls>", "http://127.0.0.1/*"],
+  "description": "Extract and process text selections from PDFs",
+  "permissions": ["activeTab", "scripting", "storage"],
+  "host_permissions": ["<all_urls>"],
   "action": {
     "default_popup": "popup.html",
-    "default_title": "PDF Research Toolkit"
-  },
-  "background": {
-    "service_worker": "background.js"
+    "default_title": "PDF Text Extractor"
   },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
       "js": ["content.js"],
-      "run_at": "document_end",
+      "run_at": "document_idle",
       "all_frames": true
     }
   ],
   "web_accessible_resources": [
     {
-      "resources": ["pdf-inject.js"],
+      "resources": ["pdf-script.js"],
       "matches": ["<all_urls>"]
     }
   ]
