--- a/manifest.json
+++ b/manifest.json
@@ -8,14 +8,21 @@
     "scripting",
     "storage"
   ],
-  "host_permissions": [
-    "<all_urls>"
-  ],
+  "host_permissions": ["<all_urls>"],
+  "web_accessible_resources": [{
+    "resources": ["pdf-inject.js"],
+    "matches": ["<all_urls>"]
+  }],
   "action": {
-    "default_popup": "popup.html",
-    "default_title": "PDF Text Extractor"
+    "default_popup": "popup.html"
   },
   "background": {
     "service_worker": "background.js"
-  }
+  },
+  "content_scripts": [{
+    "matches": ["<all_urls>"],
+    "js": ["content.js"],
+    "all_frames": true,
+    "run_at": "document_end"
+  }]
 }
