--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,7 @@
   "version": "1.0",
   "permissions": ["scripting", "activeTab", "storage"],
   "action": {
-    "default_popup": "popup.html",
-    "default_icon": "icon.png"
-  },
+    "default_popup": "popup.html",  },
   "background": {
     "service_worker": "background.js"
   },
