--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,8 @@
   "version": "1.0",
   "permissions": ["scripting", "activeTab", "storage"],
   "action": {
-    "default_popup": "popup.html"},
+    "default_popup": "popup.html"
+  },
   "background": {
     "service_worker": "background.js"
   },
