--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,17 @@
 {
   "manifest_version": 3,
-  "name": "Clipboard Text Listener",
+  "name": "PDF Clipboard Listener",
   "version": "1.0",
-  "description": "Captures copied text and shows it in the popup.",
-  "permissions": ["storage", "scripting", "activeTab", "clipboardRead"],
-  "host_permissions": ["<all_urls>"],
+  "description": "Detects copied text in PDFs and shows it in the popup.",
+  "permissions": [
+    "storage"
+  ],
+  "host_permissions": [
+    "<all_urls>",
+    "chrome-extension://mhjfbmdgcfjbbpaeojofohoefgiehjai/*"
+  ],
   "background": {
     "service_worker": "background.js"
-  },
-  "action": {
-    "default_popup": "popup.html"
   },
   "content_scripts": [
     {
@@ -17,5 +19,18 @@
       "js": ["content.js"],
       "run_at": "document_idle"
     }
-  ]
+  ],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
+  },
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  }
 }
