--- a/manifest.json
+++ b/manifest.json
@@ -2,26 +2,9 @@
   "manifest_version": 3,
   "name": "PDF Clipboard Listener",
   "version": "1.0",
-  "description": "Detects copied text in PDFs and shows it in the popup.",
+  "description": "Detects copied text and shows it in the popup.",
   "permissions": [
-    "storage",
-    "scripting",
-    "activeTab"
-  ],
-  "host_permissions": [
-    "<all_urls>"
-  ],
-  "background": {
-    "service_worker": "background.js"
-  },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"],
-      "run_at": "document_idle",
-      "all_frames": true,
-      "match_origin_as_fallback": true
-    }
+    "clipboardRead"
   ],
   "action": {
     "default_popup": "popup.html"
